# ScriptsPlayground

./: .SFLB.config  .cirrus.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  Dockerfile_ED  Dockerfile_KAD  Dockerfile_LWS  Dockerfile_RTM  Dockerfile_SFLB  Dockerfile_VICHS  KAD.temp  KAD.temp.2  KAD.temp.3  KAD.temp.4  PPB.temp.2  PPB.temp.3  PPB.temp.4  PPB_uBlock_AdGuard.temp.2  PPB_uBlock_AdGuard.temp.3  README.md  Readme_GDE.md  Readme_RHI_for_Pi-hole.md  Readme_RLI_for_Pi-hole.md  Readme_SFLB.md  Readme_VICHS.md  Test.txt  Test_Cookies.txt  Test_uBO_AG.txt  adblock_social_list.temp.2  adblock_social_list.temp.3  adblock_social_list.temp.4  adblock_social_list.temp.7  cirrus.yml  domainParking.txt  hostsplus.temp  hostsplus.temp.2  hostsplus.temp.3  (+2 more)
.circleci/: config.yml
.github/: labels.yml  solve_issue.yml
.github/ISSUE_TEMPLATE/: beta.yml  suspicious-website-report.yml
.github/workflows/: docker.yml  expiredDomains.yml  issue-auto-label.yml  issueCloser.yml  issueHelper.yml  issueLabel.yml  issueLabelClosed.yml  label-commands.yml  labeler.yml  (+3 more)
LWS/: podejrzane_LWS.txt
SFLB_Test/: test1.txt  test2.txt  test4.txt
Test/: test1.txt  test2.txt
VICHS_Test/: Cert.txt  LWS.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
expired-domains/: Cert-expired.txt  Cert-unknown.txt  Cert-unknown_limit.txt  KAD-clean.txt  KAD-expired.txt  KAD-parked.txt  KAD-unknown.txt  KAD-unknown_limit.txt  KAD-unknown_no_internet.txt  KAD_00-parked.txt  KAD_00-unknown.txt  KAD_00-unknown_limit.txt  KAD_01-expired.txt  KAD_01-parked.txt  KAD_01-unknown.txt  KAD_02-expired.txt  KAD_02-parked.txt  KAD_02-unknown.txt  KAD_03-parked.txt  KAD_03-unknown.txt  KAD_03-unknown_limit.txt  KAD_04-expired.txt  KAD_04-parked.txt  KAD_04-unknown.txt  KAD_05-expired.txt  KAD_05-parked.txt  KAD_05-unknown.txt  KAD_06-parked.txt  KAD_06-unknown.txt  KAD_07-parked.txt  KAD_07-unknown.txt  KAD_08-unknown.txt  KADhosts-expired.txt  KADhosts-parked.txt  KADhosts-unknown.txt  KADhosts-unknown_limit.txt  KADhostsWWW-parked.txt  KADhostsWWW-unknown.txt  KADhosts_00-unknown_no_internet.txt  KADhosts_01-unknown_no_internet.txt  (+98 more)
novelties/: CERT_whitelist.txt  LWS_whitelist.txt  podejrzane_LWS.txt  przekrety_CERT.txt
scripts/: CI_LETS_DO_THIS.sh  CI_LETS_DO_THIS_PPB.sh  CI_LETS_DO_THIS_PPB_supp.sh  CI_LETS_DO_THIS_kad.sh  CI_LETS_DO_THIS_kadHosts.sh  CI_LETS_DO_THIS_majkel.sh  CI_LETS_DO_THIS_rss.sh  CI_LETS_DO_THIS_social.sh  DSC.py  DSC.sh  ECODFF.py  ECODFF.sh  EDRFF.py  EDRFF.sh  FOP.py  FOP_FH.py  GDE.py  HelperForVICHS.sh  RHI_for_Pi-hole.sh  RLI_for_Pi-hole.py  RLI_for_Pi-hole.sh  RLU_for_Pi-hole.py  RLU_for_Pi-hole.sh  SFLB.config  SFLB.py  Sd2D.py  TRAVIS_LETS_DO_THIS.sh  VICHS.config  VICHS.sh  domain-check-2.sh  expired_domains.sh  findDomains.py  findDomains_cmcmedia.pl.py  findDomains_siecportali.pl.py  findSuspiciousDomains_LWS.py  find_domains_siecportali.pl.py  improve.patch  make_POT.sh  no_sc.patch  push.sh
scripts/GDE/: .pylintrc  GDE.py  LICENSE.txt  MANIFEST.in  pynsist.cfg  pyproject.toml  setup.cfg  setup.py
scripts/GDE/GDE/: GDE.py
scripts/GDE/GDE/ingredients/: GDE.ui  GDE_ui.py  about.ui  about_ui.py  group_selection.ui  group_selection_ui.py  i18n.py
scripts/GDE/GDE/locales/: GDE.pot
scripts/GDE/GDE/locales/pl/LC_MESSAGES/: GDE.po
scripts/GDE/GDE/shortcuts/share/applications/: GDE.desktop
scripts/GDE/_build/: build.py
scripts/GDE/ingredients/: GDE_ui.py  about.ui  about_ui.py  group_selection_ui.py
templates/: Test.template  Test_uBO_AG.template
(+118 files in other folders)
