[project.urls]
"Homepage" = "https://github.com/FiltersHeroes/ScriptsPlayground/blob/master/Readme_GDE.md"
"Bug Tracker" = "https://github.com/FiltersHeroes/ScriptsPlayground/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "GDE"
version = "1.3.0"
authors = [{ name = "Filters Heroes" }]
description = "Groups Domains Extractor helps in finding all domains of specific group and copies it to clipboard."
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "platformdirs",
    "tldextract",
    "beautifulsoup4",
    "QtPy",
    'PyQt5',
    'pyqtdarktheme ; platform_system == "Windows"',
]
[project.scripts]
GDE = "GDE.GDE:main"
[tool.setuptools]
include-package-data = false
[tool.setuptools.package-data]
GDE = ["locales/*/LC_MESSAGES/GDE.mo"]
