[metadata]
name = GDE
version = 1.3.0
description = Groups Domains Extractor helps in finding all domains of specific group and copies it to clipboard.

[options]
packages = 
    GDE
    GDE.ingredients
include_package_data = false

[options.package_data]
GDE =
	locales/*/LC_MESSAGES/GDE.mo

[options.packages.find]
exclude =
	__pycache__/*
